# serialize-images

./: .travis.yml  LICENSE.txt  README.md  pyproject.toml
serialize_images/: core.py
serialize_images/scripts/: tests.py
tests/: test_serialize_images.py
