[tool.poetry]
name = "serialize-images"
version = "0.1.1"
description = ""
authors = ["Igor Souza <igormcsouza@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/igormcsouza/serialize-images"
repository = "https://github.com/igormcsouza/serialize-images"
keywords = ["serialize", "images", "json", "easy"]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
test = "serialize_images.scripts.tests:run_tests"
webcov = "serialize_images.scripts.tests:open_web_coverage"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
